--- a/ClusterKit.Core/ClusterKit.Core.TestKit/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.TestKit/packages.config
@@ -1,28 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.4" targetFramework="net452" />
-  <package id="Akka.Cluster" version="1.0.4.12-beta" targetFramework="net452" />
-  <package id="Akka.DI.CastleWindsor" version="1.0.4" targetFramework="net452" />
-  <package id="Akka.DI.Core" version="1.0.4" targetFramework="net452" />
-  <package id="Akka.DI.TestKit" version="1.0.4" targetFramework="net452" />
-  <package id="Akka.Logger.Serilog" version="1.0.4" targetFramework="net452" />
-  <package id="Akka.Remote" version="1.0.4" targetFramework="net452" />
-  <package id="Akka.TestKit" version="1.0.4" targetFramework="net452" />
-  <package id="Akka.TestKit.Xunit2" version="1.0.4" targetFramework="net452" />
+  <package id="Akka" version="1.0.6" targetFramework="net45" />
+  <package id="Akka.Cluster" version="1.0.6.17-beta" targetFramework="net45" />
+  <package id="Akka.DI.CastleWindsor" version="1.0.6" targetFramework="net45" />
+  <package id="Akka.DI.Core" version="1.0.6" targetFramework="net45" />
+  <package id="Akka.DI.TestKit" version="1.0.6" targetFramework="net45" />
+  <package id="Akka.Logger.Serilog" version="1.0.6" targetFramework="net45" />
+  <package id="Akka.Remote" version="1.0.6" targetFramework="net45" />
+  <package id="Akka.TestKit" version="1.0.6" targetFramework="net45" />
+  <package id="Akka.TestKit.Xunit2" version="1.0.6" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net452" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net452" />
-  <package id="Helios" version="1.4.1" targetFramework="net452" />
-  <package id="JetBrains.Annotations" version="9.2.0" targetFramework="net452" />
+  <package id="Helios" version="1.4.2" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="10.1.2-eap" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
-  <package id="Serilog" version="1.5.11" targetFramework="net452" />
-  <package id="StackExchange.Redis" version="1.0.481" targetFramework="net452" />
-  <package id="xunit" version="2.1.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="Serilog" version="1.5.14" targetFramework="net45" />
+  <package id="StackExchange.Redis" version="1.1.572-alpha" targetFramework="net45" />
+  <package id="System.Collections" version="4.0.0" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
+  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
+  <package id="System.Globalization" version="4.0.0" targetFramework="net45" />
+  <package id="System.Linq" version="4.0.0" targetFramework="net45" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net45" />
+  <package id="System.Runtime" version="4.0.0" targetFramework="net45" />
+  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net45" />
+  <package id="xunit" version="2.2.0-beta1-build3239" targetFramework="net45" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
-  <package id="xunit.assert" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.core" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.extensibility.core" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.extensibility.execution" version="2.1.0" targetFramework="net452" />
-  <package id="xunit.runner.console" version="2.1.0" targetFramework="net452" />
+  <package id="xunit.assert" version="2.2.0-beta1-build3239" targetFramework="net45" />
+  <package id="xunit.core" version="2.2.0-beta1-build3239" targetFramework="net45" />
+  <package id="xunit.extensibility.core" version="2.2.0-beta1-build3239" targetFramework="net45" />
+  <package id="xunit.extensibility.execution" version="2.2.0-beta1-build3239" targetFramework="net45" />
+  <package id="xunit.runner.console" version="2.2.0-beta1-build3239" targetFramework="net45" developmentDependency="true" />
 </packages>
