--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/packages.config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="bootstrap" version="3.3.5" targetFramework="net46" />
-  <package id="jQuery" version="2.1.4" targetFramework="net46" />
-  <package id="knockoutjs" version="3.3.0" targetFramework="net46" />
+  <package id="bootstrap" version="4.0.0-alpha2" targetFramework="net45" />
+  <package id="jQuery" version="2.2.0" targetFramework="net45" />
+  <package id="knockoutjs" version="3.4.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net46" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net46" />
-  <package id="Microsoft.Net.Compilers" version="1.1.0-beta1-20150825-02" targetFramework="net46" developmentDependency="true" />
-  <package id="underscore.js" version="1.8.2" targetFramework="net46" />
+  <package id="Microsoft.Net.Compilers" version="1.2.0-beta1-20160202-02" targetFramework="net45" developmentDependency="true" />
+  <package id="Serilog" version="1.5.14" targetFramework="net45" />
+  <package id="underscore.js" version="1.8.3" targetFramework="net45" />
 </packages>
